Fix featured icon misalignment

--- a/web/css/_featured.sass
+++ b/web/css/_featured.sass
@@ -20,7 +20,7 @@
     display: block
     float: left
     width: 20%
-    margin-top: -40px
+    margin-top: -1.75em
 
   .right
     float: right
